--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,4 +96,8 @@
   {% endunless %}
 
   {% include metadata-hook.html %}
+
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 </head>
