--- a/_includes/head.html
+++ b/_includes/head.html
@@ -97,7 +97,5 @@
 
   {% include metadata-hook.html %}
 
-  <script type="text/javascript"
-    src="https://d3eoax9i5htok0.cloudfront.net/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
+  <script src=" https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js "></script>
 </head>
